Overflow fix

--- a/index.css
+++ b/index.css
@@ -44,8 +44,8 @@ p
 	position: absolute; 
 	top: 0; 
 	left: 0; 
-	width: 100vw; 
-	height: 100vh; 
+	width: 100%; 
+	/* height: 100vh;  */
 	z-index: -3;
 }
 
